--- a/reference/Dashboard.v1.yaml
+++ b/reference/Dashboard.v1.yaml
@@ -1035,10 +1035,17 @@ paths:
         in: path
         required: true
     delete:
-      summary: ''
+      summary: Desconectar cliente
       operationId: delete-connected-clients-id
       responses:
         '200':
           description: OK
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: Authentication
+          description: Bearer token
+          required: true
 components:
   schemas: {}
