--- a/reference/Dashboard.v1.yaml
+++ b/reference/Dashboard.v1.yaml
@@ -1237,5 +1237,37 @@ paths:
           name: Authentication
           description: Bearer token
           required: true
+  /plans/types:
+    get:
+      summary: Todos tipos de plano
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    name:
+                      type: string
+                    key:
+                      type: string
+                  required:
+                    - id
+                    - name
+                    - key
+      operationId: get-plans-types
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: Authentication
+          description: Bearer token
+          required: true
 components:
   schemas: {}
