--- a/reference/Dashboard.v1.yaml
+++ b/reference/Dashboard.v1.yaml
@@ -1225,7 +1225,7 @@ paths:
                 hotspot_id:
                   type: integer
     delete:
-      summary: ''
+      summary: Deletar plano
       operationId: delete-plans-id
       responses:
         '200':
